IFrame: added 100% height on iPhones to fix layout issues
On iPhone devices (Safari, Chrome) the IFRAME element within the
browser-field always had the wrong height. The height of the IFRAME
was smaller than the height of the surrounding browser field. Thus
in some cases text has been cut off and was not readable.

274946

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/iframe/IFrame.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/iframe/IFrame.less
@@ -12,6 +12,9 @@
   &.no-scrolling {
     overflow: hidden;
   }
+  &.iphone {
+    height: 100%;
+  }
 }
 
 .iframe-wrapper {
